Mon, Apr 25, 2022, 8:03 PM +00:00

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -38,10 +38,15 @@ h1 {
 }
 
 .popup {
-    visibility: ;
+    display: none;
 }
 
-button, input[type="submit"] {
+.show_popup {
+    display: inline;
+}
+
+button,
+input[type="submit"] {
     background-color: #d9edff;
     border: 1px solid transparent;
     border-radius: 0.25rem;
