Mon, Apr 25, 2022, 9:16 PM +00:00

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -45,8 +45,8 @@ h1 {
     display: inline;
 }
 
-button:hover {
-    background: blue;
+.correct_popup_color {
+    background: green;
 }
 
 button,
