--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -46,7 +46,6 @@ body {
     background-color: #2C2C2C;
     position: relative;
     min-height: 100%;
-    
 }
 
 .movies {
@@ -81,7 +80,7 @@ footer {
     bottom: 0;
     left: 0;
     text-align: center;
-  }
+}
 
 /* Movie-Page stylings */
 
@@ -93,7 +92,7 @@ footer {
     padding: 30px;
     z-index: 1;
     position: absolute;
-    background: linear-gradient(270deg, rgba(87,72,72,0) 0%, rgba(0,0,0,1) 47%);
+    background: linear-gradient(270deg, rgba(87, 72, 72, 0) 0%, rgba(0, 0, 0, 1) 47%);
     width: 35%;
     height: 100%;
 }
@@ -127,7 +126,8 @@ iframe {
         flex-direction: column;
     }
 
-    .trailer, .side-bar {
+    .trailer,
+    .side-bar {
         position: relative;
         flex: 1;
     }
@@ -137,6 +137,7 @@ iframe {
         width: 100%;
         height: auto;
     }
+
     .trailer {
         bottom: 0;
     }
