--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -17,7 +17,7 @@
 
             <h2>Add a Birthday</h2>
             <!-- TODO: Create a form for users to submit a name, a month, and a day -->
-            <form action="/" method="post">
+            <form action="#" method="post">
                 <input type="text" id="name" placeholder="Name">
 
                 <input type="number" id="month" placeholder="Month">
