--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -18,11 +18,11 @@
             <h2>Add a Birthday</h2>
             <!-- TODO: Create a form for users to submit a name, a month, and a day -->
             <form action="#" method="post">
-                <input type="text" id="name" placeholder="Name">
+                <input type="text" name="name" placeholder="Name">
 
-                <input type="number" id="month" placeholder="Month">
+                <input type="number" name="month" placeholder="Month">
 
-                <input type="number" id="day" placeholder="Day">
+                <input type="number" name="day" placeholder="Day">
 
                 <input type="submit" value="Add Birthday">
             </form>
