--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -36,7 +36,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Birthdayhelp</th>
+                        <th>Birthday</th>
                     </tr>
                 </thead>
                 <tbody>
