--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -13,6 +13,9 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <div class="mb-3">
+            <input class="form-control mx-auto w-auto" id="confirm-password" name="confirm-password" placeholder="Confirm Password" type="password">
+        </div>
+        <button class="btn btn-primary" type="submit">Register</button>
     </form>
 {% endblock %}
