--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1 class="m-5">Register</h1>
+    <h1 class="m-5 text-primary">Register</h1>
     <form action="/register" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
