--- a/finance/templates/quoted.html
+++ b/finance/templates/quoted.html
@@ -6,5 +6,5 @@
 
 {% block main %}
     <h1 class="m-5 text-primary">Quoted</h1>
-    <h3>{{ value }}</h3>
+    <h3>{{ quote }}</h3>
 {% endblock %}
