Thu, Jun 9, 2022, 8:05 PM +00:00

--- a/finance/templates/quoted.html
+++ b/finance/templates/quoted.html
@@ -7,4 +7,5 @@
 {% block main %}
     <h1 class="m-5 text-primary">Quoted</h1>
     <h3>{{ quote }}</h3>
+    <a href="/quote" class="m-5"><p>Get another Quote</p></a>
 {% endblock %}
