Thu, Jun 9, 2022, 11:01 PM +00:00

--- a/finance/templates/quoted.html
+++ b/finance/templates/quoted.html
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block main %}
-    <h1 class="m-5 text-primary">Quoted</h1>
-    <h3>The price of 1 share of {{ quote['name'] }} is {{ quote['price'] | usd }}</h3>
-    <a href="/quote" class="m-5"><p>Get another Quote</p></a>
+    { if quoted }
+        <h1 class="m-5 text-primary">Quoted</h1>
+        <h3>The price of 1 share of {{ quote['name'] }} is {{ quote['price'] | usd }}</h3>
+        <a href="/quote" class="m-5"><p>Get another Quote</p></a>
+    { end if }
 {% endblock %}
