--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h1 class="m-5 text-primary">Buy Stocks</h1>
-    <form action="/quote" method="post">
+    <form action="/buy" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Stock Symbol" type="text">
         </div>
