--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -8,7 +8,7 @@
     <h1 class="m-5 text-primary">Portfolio</h1>
     <h2>Purchase Power: </h2>
     <h2>Cash: </h2>
-    <table>
+    <table class="table table-striped">
         
     </table>
 {% endblock %}
