Fri, Jun 10, 2022, 4:11 PM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -9,6 +9,10 @@
     <h2>Purchase Power: </h2>
     <h2>Cash: </h2>
     <table class="table table-striped">
-        
+        <th>Symbol</th>
+        <th>Name</th>
+        <th>Shares</th>
+        <th>Price</th>
+        <th>Total</th>
     </table>
 {% endblock %}
