Fri, Jun 10, 2022, 4:30 PM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -8,7 +8,7 @@
     <h1 class="m-3 text-primary">Portfolio</h1>
     <h2>Purchase Power: </h2>
     <h2>Cash: </h2>
-    <table class="table table-striped">
+    <table class="table table-striped .table-responsive-lg">
         <th>Symbol</th>
         <th>Name</th>
         <th>Shares</th>
