Sat, Jun 11, 2022, 4:44 AM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -17,11 +17,11 @@
 
         <!-- for each row in finance.portfolio:
             <tr>
-                <td>table[symbol]</td>
-                <td>table[name]</td>
-                <td>table[shares]</td>
-                <td>table[price]</td>
-                <td>table[total]</td>
+                <td>portfolio['Symbol']</td>
+                <td>portfolio['Name']</td>
+                <td>portfolio['Shares']</td>
+                <td>portfolio[price]</td>
+                <td>portfolio[total]</td>
             </tr>
         end for -->
 
