--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -13,6 +13,6 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="# of Shares" type="number">
         </div>
-        <button class="btn btn-primary" type="submit">Lookup</button>
+        <button class="btn btn-primary" type="submit">Buy</button>
     </form>
 {% endblock %}
