Sat, Jun 11, 2022, 7:42 PM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -7,7 +7,7 @@
 {% block main %}
     <h1 class="m-3 text-primary">Portfolio</h1>
     <h2>Purchase Power: </h2>
-    <h2>Cash: </h2>
+    <h2>Cash: {{ cash }}</h2>
     <table class="table table-striped">
         <th>Symbol</th>
         <th>Name</th>
