Sat, Jun 11, 2022, 7:44 PM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -6,8 +6,8 @@
 
 {% block main %}
     <h1 class="m-3 text-primary">Portfolio</h1>
-    <h2>Purchase Power: </h2>
-    <h2>Cash: {{ cash }}</h2>
+    <h2>Purchase Power: (cash + all investments)</h2>
+    <h2>Cash: {{ cash[0]['cash'] | usd }}</h2>
     <table class="table table-striped">
         <th>Symbol</th>
         <th>Name</th>
