Sat, Jun 11, 2022, 11:12 PM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -17,11 +17,11 @@
 
         {% for row in portfolio %}
             <tr>
-                <td>row['symbol']</td>
-                <td>row['name']</td>
-                <td>row['shares']</td>
-                <td>row['price']</td>
-                <td>row['total']</td>
+                <td>{{ row['symbol'] }}</td>
+                <td>{{ row['name'] }}</td>
+                <td>{{ row['shares'] }}</td>
+                <td>{{ row['price'] }}</td>
+                <td>{{ row['total'] }}</td>
             </tr>
         {% endfor %}
 
