--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block main %}
+    <div class="alert alert-primary" role="alert">
+        A simple primary alert—check it out!
+    </div>
     <h1 class="m-3 text-primary">Portfolio</h1>
     <h2>Purchase Power: (cash + all investments)</h2>
     <h2>Cash: {{ cash[0]['cash'] | usd }}</h2>
@@ -24,6 +27,5 @@
                 <td>{{ row['total'] }}</td>
             </tr>
         {% endfor %}
-
     </table>
 {% endblock %}
