Wed, Jun 15, 2022, 6:43 AM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block main %}
-    <div class="alert alert-primary" role="alert">
+    <!-- <div class="alert alert-primary" role="alert">
         A simple primary alert—check it out!
-    </div>
+    </div> -->
     <h1 class="m-3 text-primary">Portfolio</h1>
     <h2>Purchase Power: (cash + all investments)</h2>
     <h2>Cash: {{ cash[0]['cash'] | usd }}</h2>
