--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1 class="m-5 text-primary">Buy Stocks</h1>
+    <h1 class="m-5 text-primary">Sell Stocks</h1>
     <form action="/buy" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Stock Symbol" type="text">
