--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -7,9 +7,9 @@
 {% block main %}
     <h1 class="m-5 text-primary">Sell Stocks</h1>
     <form action="/buy" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Stock Symbol" type="text">
-        </div>
+        <select class="form-select mx-auto w-auto" name="symbol">
+            <option disabled="" selected="">Symbol</option>
+        </select>
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="# of Shares" type="number">
         </div>
