--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -9,6 +9,9 @@
     <form action="/buy" method="post">
         <select class="form-select mx-auto w-auto" name="symbol">
             <option disabled="" selected="">Symbol</option>
+            {% for symbol in portfolio %}
+                <option></option>
+            {% endfor %}
         </select>
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="# of Shares" type="number">
