Wed, Jun 15, 2022, 5:24 PM +00:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -11,6 +11,7 @@
             <option disabled="" selected="">Symbol</option>
             {% for symbol in portfolio %}
                 <option></option>
+                #test 
             {% endfor %}
         </select>
         <div class="mb-3">
