--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -7,16 +7,15 @@
 {% block main %}
     <h1 class="m-5 text-primary">Sell Stocks</h1>
     <form action="/buy" method="post">
-        <select class="form-select mx-auto w-auto" name="symbol">
+        <select class="form-select mx-auto w-auto m-3" name="symbol">
             <option disabled="" selected="">Symbol</option>
-            {% for symbol in portfolio %}
-                <option></option>
-                #test 
+            {% for symbol in symbols %}
+                <option value= {{ symbol['symbol'] }}>{{ symbol['symbol'] }}</option>
             {% endfor %}
         </select>
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="# of Shares" type="number">
         </div>
-        <button class="btn btn-primary" type="submit">Buy</button>
+        <button class="btn btn-primary" type="submit">Sell</button>
     </form>
 {% endblock %}
