--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h1 class="m-5 text-primary">Sell Stocks</h1>
-    <form action="/buy" method="post">
+    <form action="/sell" method="post">
         <select class="form-select mx-auto w-auto m-3" name="symbol">
             <option disabled="" selected="">Symbol</option>
             {% for symbol in symbols %}
