--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -1,12 +1,11 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home
+    History
 {% endblock %}
 
 {% block main %}
-    <h1 class="m-3 text-primary">Portfolio</h1>
-    <h2>Purchase Power: (cash + all investments)</h2>
+    <h1 class="m-3 text-primary">History</h1>
     <h2>Cash: {{ cash[0]['cash'] | usd }}</h2>
     <table class="table table-striped">
         <th>Symbol</th>
