Thu, Jun 16, 2022, 5:17 PM +00:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h1 class="m-3 text-primary">Portfolio</h1>
-    <h2>Purchase Power: (cash + all investments)</h2>
+    <h2>Purchase Power: {{ purchase_power | usd }}</h2>
     <h2>Cash: {{ cash | usd }}</h2>
     <table class="table table-striped">
         <th>Symbol</th>
