--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -6,21 +6,18 @@
 
 {% block main %}
     <h1 class="m-3 text-primary">History</h1>
-    <h2>Cash: {{ cash[0]['cash'] | usd }}</h2>
     <table class="table table-striped">
         <th>Symbol</th>
-        <th>Name</th>
         <th>Shares</th>
         <th>Price</th>
-        <th>Total</th>
+        <th>Date</th>
 
         {% for row in portfolio %}
             <tr>
                 <td>{{ row['symbol'] }}</td>
-                <td>{{ row['name'] }}</td>
                 <td>{{ row['shares'] }}</td>
                 <td>{{ row['price'] }}</td>
-                <td>{{ row['total'] }}</td>
+                <td>{{ row['date'] }}</td>
             </tr>
         {% endfor %}
     </table>
