--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -12,7 +12,7 @@
         <th>Price</th>
         <th>Date</th>
 
-        {% for row in portfolio %}
+        {% for row in history %}
             <tr>
                 <td>{{ row['symbol'] }}</td>
                 <td>{{ row['shares'] }}</td>
