--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -17,7 +17,7 @@
                 <td>{{ row['symbol'] }}</td>
                 <td>{{ row['shares'] }}</td>
                 <td>{{ row['price'] }}</td>
-                <td>{{ row['date'] }}</td>
+                <td>{{ row['time'] }}</td>
             </tr>
         {% endfor %}
     </table>
