--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -8,7 +8,7 @@
     <h1 class="m-5 text-primary">Quote Lookup</h1>
     <form action="/quote" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="quote" name="quote" placeholder="Stock Symbol" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Stock Symbol" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Lookup</button>
     </form>
